# jetoleo-backend

./: .env  Cargo.toml  README.md
migrations/: 20250816_CREATE_USER_TABLE.down.sql  20250816_CREATE_USER_TABLE.up.sql
src/: config.rs  db.rs  main.rs  middleware.rs
src/error/: http_error.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/routers/: health_router.rs  mod.rs  user_router.rs
src/services/: user_service.rs
src/utils/: mod.rs  page_params.rs
